- TW-1389 tw will import same UUID n-times if part of same import (thanks to
          Markus Beppler).
- TW-1432 start/stop can be issued on completed tasks  (thanks to Renato Alves).
- TW-1440 "task import" from STDIN (thanks to Renato Alves).
- TW-1454 Redundant dependency should not stop modification  (thanks to Tomas
          Babej).
- TW-1527 Extra spaces added around slashes (thanks to Renato Alves).
- TW-1572 Better urgency inheritance (thanks to Jens Erat).
- TW-1600 Filtering "regressions"(?) in task-2.4.3, task-2.4.4 (thanks to Ralph
          Bean).
- TW-1609 In 'urgency<10', 10 is interpreted as an ID (thanks to Wim Schuermann).
- TW-1612 Spurious whitespace added in task descriptions around certain symbols
          (thanks to Denis Kasak).
- TW-1615 Japanese translation for Taskwarrior(150513) (thanks to ribbon).
- Prevent potential task duplication during import for non-pending tasks.
- Show the active context in "context list", if any is active.
- Fix "task edit" dropping annotation text after newlines.
- Removed obsolete script 'context'.
- Fix "project" verbosity info not showing without "footnote" being manually
  enabled.
- Internal plumbing:  Use variadic templates for format(), reducing code bloat
  and enabling more flexible use of the function.
- Enable "task sync" support by default.  "cmake -DENABLE_SYNC=OFF" allows
  disabling it and building Taskwarrior without libgnutls available.
- An attempt to add or remove a virtual tag is now an error (thanks to Scott M).
- json.array now defaults to "on", making "export" output a JSON array that
  can be parsed by most JSON libraries without changes.
- The '_ids', '_projects', '_tags', '_uuids' helper commands are deprecated,
  and replaced by the new '_unique' helper command, which generates lists of
  unique values for the specified attribute.

------ current release ---------------------------

2.4.4 (2015-05-10) df49aaba126484b668c41d3ff9301f8d8ec49987
